--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <div id="header_wrap" class"outer">
     <header clas="inner">
       <h1 id="project_tittle">
-        <p style="background:black; color:#066DCC; font-weight:bold; padding:25px; text-align:center; font-size:60px; font-family:Raleway">Asteroides Cercanos a la Tierra (NEA's)</p>
+        <p style="background:black; color:#066DCC; font-weight:bold; padding:25px; text-align:center; font-size:60px; font-family:Raleway">Asteroides Cercanos a la Tierra (NEAs)</p>
       </h1>
   </div>
   <hr color="#02284A" size=3>
@@ -172,7 +172,7 @@
           <li><a href="https://asteroidesinaoe.github.io/Actividad-rbitas-de-Asteroides/">Órbitas</a></li>
         </ul>
       </li>
-      <li><a href="https://asteroidesinaoe.github.io/Actividades/">Aprender más</a>
+      <li><a href="https://asteroidesinaoe.github.io/Aprender-m-s/">Aprender más</a>
         <ul>
 	  <li><a href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a></li>
 	  <li><a href="https://asteroidesinaoe.github.io/CCD/">CCD</a></li>
@@ -181,7 +181,7 @@
         </ul>
       </li>
       <li><a href="https://asteroidesinaoe.github.io/Glosario/">Glosario</a></li>
-      <li><a href="https://asteroidesinaoe.github.io/">Contacto</a></li>
+      <li><a href="https://asteroidesinaoe.github.io/Contacto/">Contacto</a></li>
     </ul>
   </div>
 
@@ -190,21 +190,37 @@
 <div class="indice">
 	<h1 class="indice_titulo"><b>Contenido</b></h1>
 	<ul class="indice_lista">
-		<li><a class="contenido" href="#actv1" target="_top">Sección 1</a></li>
-		<li><a class="contenido" href="#actv2" target="_top">Sección 2</a></li>
+		<li><a class="contenido" href="#temas" target="_top">Temas de Interés</a></li>
+		<li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a></li>
 	</ul>
 		
 </div>	  
 
 
 <font color="white">
-<div class="capa"><a name="indice1"></a></div>
-<h2>Actividades<br><br></h2>
+
+<h2>Aprender más<br><br></h2>
   <p>
-    Texto <br><br>
+    En esta página podrá encontrar más información relacionada a la detección, clasificación y estudio de los asteroides. Esta información es muy importante consultarla antes de realizar las actividades que puede encontrar en el menú, pues le dan un contexto de lo que podrá encontrarse. Así mismo, encontrará links que lo llevaran a otras páginas de interés. <br><br>
   </p>
-    
-  
+<div class="capa"><a name="temas"></a></div> 
+<h3>Temas de interés<br><br></h3>
+<blockquote>
+    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
+    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
+    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
+    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>	    
+  </blockquote>       	
+
+<div class="capa"><a name="enlaces"></a></div> 
+<h3>Enlaces externos<br><br></h3>
+  <blockquote>
+    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://minorplanetcenter.net/">Minor Planet Center</a>
+    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>  
+    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>  
+  </blockquote>       	
+	
+	
 </font>   
 </div>
 </div>
