--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 
 
 <font color="white">
-
+<div class="capa"></div>
 <h2>Aprender más<br><br></h2>
   <p>
     En esta página podrá encontrar más información relacionada a la detección, clasificación y estudio de los asteroides. Esta información es muy importante consultarla antes de realizar las actividades que puede encontrar en el menú, pues le dan un contexto de lo que podrá encontrarse. Así mismo, encontrará links que lo llevaran a otras páginas de interés. <br><br>
