--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 	    color:white;
 	}
 	
+    .actividades {
+	font-size:25px;  
+	padding-left:30px;	    
+    }
+	
     .container1{
 	    display:flex;
 	    flex-flow:column;
@@ -206,18 +211,18 @@
 <div class="capa"><a name="temas"></a></div> 
 <h3>Temas de interés<br><br></h3>
 <blockquote>
-    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
-    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
-    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
-    <p style="text-family:calibri; padding:0px 50px">📚 <a href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>	    
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>	    
   </blockquote>       	
 
 <div class="capa"><a name="enlaces"></a></div> 
 <h3>Enlaces externos<br><br></h3>
   <blockquote>
-    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://minorplanetcenter.net/">Minor Planet Center</a>
-    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>  
-    <p style="text-family:calibri; padding:0px 50px">🌎 <a href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>  
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://minorplanetcenter.net/">Minor Planet Center</a>
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>  
+    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>  
   </blockquote>       	
 	
 	
