--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       display: block;
     }
 
-   
+
 
 
 
@@ -189,7 +189,7 @@
       font-size: 20px;
     }
 
-    
+
 
     /* Tablas */
     table {
@@ -256,7 +256,7 @@
     <img src="img/LOGO INAOE 2012 blanco PNG.png" alt="INAOE" class="logoimg">
   </header>
 
-  
+
   <div class="container1">
     <div id="header">
       <ul class="nav">
@@ -282,52 +282,66 @@
     </div>
 
 
-<div class="container2">
-<div class="indice">
-	<h1 class="indice_titulo"><b>Contenido</b></h1>
-	<ul class="indice_lista">
-		<li><a class="contenido" href="#temas" target="_top">Temas de Interés</a></li>
-		<li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a></li>
-	</ul>
-		
-</div>	  
+    <div class="container2">
+      <div class="indice">
+        <h1 class="indice_titulo"><b>Contenido</b></h1>
+        <ul class="indice_lista">
+          <li><a class="contenido" href="#temas" target="_top">Temas de Interés</a></li>
+          <li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a></li>
+        </ul>
+
+      </div>
+
+      <div class="texto">
+        <font color="white">
+          <div class="capa"></div>
+          <h2>Aprender más<br><br></h2>
+          <p>
+            En esta página podrá encontrar más información relacionada a la detección, clasificación y estudio de los
+            asteroides. Esta información es muy importante consultarla antes de realizar las actividades que puede
+            encontrar en el menú, pues le dan un contexto de lo que podrá encontrarse. Así mismo, encontrará links que
+            lo
+            llevaran a otras páginas de interés. <br><br>
+          </p>
+          <div class="capa"><a name="temas"></a></div>
+          <h3>Temas de interés<br><br></h3>
+          <blockquote>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
+                href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
+                href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
+                href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
+                href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>
+          </blockquote>
+
+          <div class="capa"><a name="enlaces"></a></div>
+          <h3>Enlaces externos<br><br></h3>
+          <blockquote>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
+                href="https://minorplanetcenter.net/">Minor Planet Center</a>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
+                href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>
+            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
+                href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>
+          </blockquote>
 
 
-<font color="white">
-<div class="capa"></div>
-<h2>Aprender más<br><br></h2>
-  <p>
-    En esta página podrá encontrar más información relacionada a la detección, clasificación y estudio de los asteroides. Esta información es muy importante consultarla antes de realizar las actividades que puede encontrar en el menú, pues le dan un contexto de lo que podrá encontrarse. Así mismo, encontrará links que lo llevaran a otras páginas de interés. <br><br>
-  </p>
-<div class="capa"><a name="temas"></a></div> 
-<h3>Temas de interés<br><br></h3>
-<blockquote>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>	    
-  </blockquote>       	
-
-<div class="capa"><a name="enlaces"></a></div> 
-<h3>Enlaces externos<br><br></h3>
-  <blockquote>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://minorplanetcenter.net/">Minor Planet Center</a>
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>  
-    <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>  
-  </blockquote>       	
-	
-	
-</font>   
-</div>
-</div>
+        </font>
+      </div>
+    </div>
 
 
 
 
-<div id="header_wrap2" class"outer">
-    <header clas="inner">
-        <p style="background:black; color:white; padding:25px; text-align:center; font-size:15px">2022 - Página diseñada y desarrollada por el grupo de trabajo BUAP-INAOE del programa: Asteroides Cercanos a la Tierra (NEAs)</p>
-</div>    
-     
+    <div id="header_wrap2" class"outer">
+      <header clas="inner">
+        <p style="background:black; color:white; padding:25px; text-align:center; font-size:15px">2022 - Página diseñada
+          y
+          desarrollada por el grupo de trabajo BUAP-INAOE del programa: Asteroides Cercanos a la Tierra (NEAs)</p>
+    </div>
+
 </body>
+
 </html>
