--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
             <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
                 href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>
             <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
-                href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>
+                href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a><br>
           </blockquote>
 
 
