--- a/index.html
+++ b/index.html
@@ -305,28 +305,24 @@
           </p>
           <div class="capa"><a name="temas"></a></div>
           <h3>Temas de interés<br><br></h3>
-          <blockquote>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
-                href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
-                href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
-                href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">📚 <a
-                href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a>
-          </blockquote>
+            <h4>📚 <a
+                      href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a></h4><br><br>
+            <h4>📚 <a
+                      href="https://asteroidesinaoe.github.io/CCD/">CCD</a></h4><br><br>
+            <h4>📚 <a
+                      href="https://asteroidesinaoe.github.io/MPO-Canopus/">MPO Canopus</a></h4><br><br>
+            <h4>📚 <a
+                      href="https://asteroidesinaoe.github.io/Fourier/">Análisis de Fourier</a></h4><br><br>
 
           <div class="capa"><a name="enlaces"></a></div>
           <h3>Enlaces externos<br><br></h3>
-          <blockquote>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
-                href="https://minorplanetcenter.net/">Minor Planet Center</a>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
-                href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>
-            <p style="text-family:calibri; padding:0px 50px" class="actividades">🌎 <a
-                href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a><br>
-          </blockquote>
-
+            <h4>🌎 <a
+                      href="https://minorplanetcenter.net/">Minor Planet Center</a></h4><br><br>
+            <h4>🌎 <a
+                      href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a></h4><br><br>
+            <h4>🌎 <a
+                      href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a></h4><br><br>
+          
 
         </font>
       </div>
