--- a/index.html
+++ b/index.html
@@ -90,21 +90,46 @@
           </p>
           <div class="capa"><a name="temas"></a></div>
           <h3>Temas de interés<br><br></h3>
-            <h4>📚 <a
-                      href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a></h4><br><br>
-            <h4>📚 <a
-                      href="https://asteroidesinaoe.github.io/CCD/">CCD</a></h4><br><br>
+              <ul>
+                <li>📚 <a
+                      href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
+                </li>
+                <li>📚 <a
+                      href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
+                </li>
+            <h4>
 
           <div class="capa"><a name="enlaces"></a></div>
           <h3>Enlaces externos<br><br></h3>
-            <h4>🌎 <a
-                      href="https://minorplanetcenter.net/">Minor Planet Center</a></h4><br><br>
-            <h4>🌎 <a
-                      href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a></h4><br><br>
-            <h4>🌎 <a
-                      href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a></h4><br><br>
-          
-
+            <h4>Bases de datos</h4>
+              <ul>
+                <li>🌎 <a
+                      href="https://minorplanetcenter.net/">Minor Planet Center</a>
+                </li>
+                <li>🌎 <a
+                      href="https://ssd.jpl.nasa.gov/">Solar System Dynamics</a>
+                </li>
+                <li>🌎 <a
+                      href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>
+                </li>
+              </ul>
+            <h4>Simuladores</h4>
+              <ul>
+                <li><a
+                       href="https://eyes.nasa.gov/apps/asteroids/#/asteroids">Eyes on Asteroids</a>
+              </ul>
+            <h4>Videos</h4>
+              <video src="https://www.youtube.com/watch?v=53Js-_vo3mo&t=7s" width="70%"></video>
+            <h4>Más páginas relacionadas</h4>
+              <ul>
+                <li><a 
+                       href="https://solarsystem.nasa.gov/asteroids-comets-and-meteors/asteroids/in-depth/">
+                       Asteroids - Solar System Exploration NASA</a>
+                </li>
+                <li><a
+                       href="https://www.jpl.nasa.gov/asteroid-watch">Asteroid Watch</a>
+              </ul>
+              
         </font>
       </div>
     </div>
