--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </p>
           <div class="capa"><a name="temas"></a></div>
           <h3>Temas de interés<br><br></h3>
-              <ul>
+              <ul class="listas">
                 <li>📚 <a
                       href="https://asteroidesinaoe.github.io/Rayos-cosmicos/">Rayos cósmicos</a>
                 </li>
@@ -102,7 +102,7 @@
           <div class="capa"><a name="enlaces"></a></div>
           <h3>Enlaces externos<br><br></h3>
             <h4>Bases de datos</h4>
-              <ul>
+              <ul class="listas">
                 <li>🌎 <a
                       href="https://minorplanetcenter.net/">Minor Planet Center</a>
                 </li>
@@ -114,14 +114,16 @@
                 </li>
               </ul>
             <h4>Simuladores</h4>
-              <ul>
+              <ul class="listas">
                 <li><a
                        href="https://eyes.nasa.gov/apps/asteroids/#/asteroids">Eyes on Asteroids</a>
               </ul>
             <h4>Videos</h4>
-              <video src="https://www.youtube.com/watch?v=53Js-_vo3mo&t=7s" width="70%"></video>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
+                      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h4>Más páginas relacionadas</h4>
-              <ul>
+              <ul class="listas">
                 <li><a 
                        href="https://solarsystem.nasa.gov/asteroids-comets-and-meteors/asteroids/in-depth/">
                        Asteroids - Solar System Exploration NASA</a>
