--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         <h1 class="indice_titulo"><b>Contenido</b></h1>
         <ul class="indice_lista">
           <li><a class="contenido" href="#temas" target="_top">Temas de Interés</a></li>
-          <li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a></li>
+          <li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a>
+            <li><a class="contenido" href="#bases de datos" target="_top">Bases de datos</a></li>
+          </li>
         </ul>
 
       </div>
@@ -97,10 +99,12 @@
                 <li>📚 <a
                       href="https://asteroidesinaoe.github.io/CCD/">CCD</a>
                 </li>
+              </ul>
             <h4>
 
           <div class="capa"><a name="enlaces"></a></div>
           <h3>Enlaces externos<br><br></h3>
+            <div class="capa"><a name="bases de datos"></a></div>
             <h4>Bases de datos</h4>
               <ul class="listas">
                 <li>🌎 <a
@@ -113,15 +117,18 @@
                       href="https://minplanobs.org/alcdef/php/alcdef_briefHistory-1.html">ALCDEF</a>
                 </li>
               </ul>
+            <div class="capa"><a name="simuladores"></a></div> 
             <h4>Simuladores</h4>
               <ul class="listas">
                 <li><a
                        href="https://eyes.nasa.gov/apps/asteroids/#/asteroids">Eyes on Asteroids</a>
               </ul>
+            <div class="capa"><a name="videos"></a></div>
             <h4>Videos</h4>
               <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
                       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                       clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="capa"><a name="mas"></a></div>
             <h4>Más páginas relacionadas</h4>
               <ul class="listas">
                 <li><a 
