--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         <ul class="indice_lista">
           <li><a class="contenido" href="#temas" target="_top">Temas de Interés</a></li>
           <li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a>
-            <li><a class="contenido" href="#bases de datos" target="_top">Bases de datos</a></li>
+            <ul>
+              <li><a class="contenido" href="#bases de datos" target="_top">Bases de datos</a></li>
+            </ul>
           </li>
         </ul>
 
@@ -103,7 +105,7 @@
             <h4>
 
           <div class="capa"><a name="enlaces"></a></div>
-          <h3>Enlaces externos<br><br></h3>
+          <h3>Enlaces externos</h3>
             <div class="capa"><a name="bases de datos"></a></div>
             <h4>Bases de datos</h4>
               <ul class="listas">
@@ -125,9 +127,11 @@
               </ul>
             <div class="capa"><a name="videos"></a></div>
             <h4>Videos</h4>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
+              <center>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
                       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br>
+              </center>
             <div class="capa"><a name="mas"></a></div>
             <h4>Más páginas relacionadas</h4>
               <ul class="listas">
