--- a/index.html
+++ b/index.html
@@ -126,8 +126,12 @@
             <div class="capa"><a name="simuladores"></a></div> 
             <h4>Simuladores</h4>
               <ul class="listas">
-                <li><a
+                <li>🖥️ <a
                        href="https://eyes.nasa.gov/apps/asteroids/#/asteroids">Eyes on Asteroids</a>
+                </li>
+                <li>🖥️ <a
+                       href="https://asteroidcollision.herokuapp.com/">Asteroid Damage Visualization Map</a>
+                </li>
               </ul>
             <div class="capa"><a name="videos"></a></div>
             <h4>Videos</h4>
@@ -139,6 +143,9 @@
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/POTVhDQm708" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VqXjiazxlCA" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
               </center>
@@ -158,14 +165,18 @@
             <div class="capa"><a name="mas"></a></div>
             <h4>Más páginas relacionadas</h4>
               <ul class="listas">
-                <li><a 
+                <li>🔎 <a 
                        href="https://solarsystem.nasa.gov/asteroids-comets-and-meteors/asteroids/in-depth/">
                        Asteroids - Solar System Exploration NASA</a>
                 </li>
-                <li><a
+                <li>🔎 <a
                        href="https://www.jpl.nasa.gov/asteroid-watch">Asteroid Watch</a>
               </ul>
-              
+              <li>🔎 <a 
+                       href="https://www.ugr.es/~eaznar/conversorFecha.htm">
+                       Conversor Fecha Juliana</a>
+                </li>
+              <br><br>
         </font>
       </div>
     </div>
