--- a/index.html
+++ b/index.html
@@ -136,29 +136,29 @@
             <div class="capa"><a name="videos"></a></div>
             <h4>Videos</h4>
               <center>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/53Js-_vo3mo" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
                       title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                       clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/hsFxUeiz-XY" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hsFxUeiz-XY" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/POTVhDQm708" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/POTVhDQm708" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/VqXjiazxlCA" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VqXjiazxlCA" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
               </center>
             <div class="capa"><a name="conferencias"></a></div>
             <h4>Conferencias</h4>
               <center>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/eiS8EPOL488" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eiS8EPOL488" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
-                <iframe width="49%" height="9%" src="https://www.youtube.com/embed/BWRqVCRubYs" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BWRqVCRubYs" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
-                <iframe width="49$" height="9%" src="https://www.youtube.com/embed/SAvMpcqFmyc" 
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SAvMpcqFmyc" 
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
               </center>
