--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                        href="https://asteroidcollision.herokuapp.com/">Asteroid Damage Visualization Map</a>
                 </li>
               </ul>
+            <div class="videos_grandes">
             <div class="capa"><a name="videos"></a></div>
             <h4>Videos</h4>
               <center>
@@ -162,6 +163,38 @@
                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
               </center>
+            </div>
+            <div class="videos_pequeños">
+            <div class="capa"><a name="videos"></a></div>
+            <h4>Videos</h4>
+              <center>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/53Js-_vo3mo" 
+                      title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                      clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hsFxUeiz-XY" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/POTVhDQm708" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VqXjiazxlCA" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+              </center>
+            <div class="capa"><a name="conferencias"></a></div>
+            <h4>Conferencias</h4>
+              <center>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/eiS8EPOL488" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/BWRqVCRubYs" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SAvMpcqFmyc" 
+                        title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                        clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
+              </center>
+            </div>
             <div class="capa"><a name="mas"></a></div>
             <h4>Más páginas relacionadas</h4>
               <ul class="listas">
