--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-<html>
-
+<html lang="es">
 <head>
-  <title>Aprender más</title>
-  <meta charset="UTF-8">
+    <title>Aprender más</title>
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js"  ></script>
