--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <li><a class="contenido" href="#enlaces" target="_top">Enlaces externos</a>
             <ul class="indice_lista">
               <li><a class="contenido" href="#bases de datos" target="_top">Bases de datos</a></li>
-              <li><a class="contenido" href="#simuladores" target="_top">Bases de datos</a></li>
+              <li><a class="contenido" href="#simuladores" target="_top">Simuladores</a></li>
               <li><a class="contenido" href="#videos" target="_top">Videos</a></li>
               <li><a class="contenido" href="#conferencias" target="_top">Conferencias</a></li>
               <li><a class="contenido" href="#mas" target="_top">Más páginas relacionadas</a></li>
@@ -130,6 +130,20 @@
                 </li>
                 <li>🖥️ <a
                        href="https://asteroidcollision.herokuapp.com/">Asteroid Damage Visualization Map</a>
+                </li>
+              </ul>
+            <div class="capa"><a name="mas"></a></div>
+            <h4>Más páginas relacionadas</h4>
+              <ul class="listas">
+                <li>🔎 <a 
+                       href="https://solarsystem.nasa.gov/asteroids-comets-and-meteors/asteroids/in-depth/">
+                       Asteroids - Solar System Exploration NASA</a>
+                </li>
+                <li>🔎 <a
+                       href="https://www.jpl.nasa.gov/asteroid-watch">Asteroid Watch</a>
+                <li>🔎 <a 
+                       href="https://www.ugr.es/~eaznar/conversorFecha.htm">
+                       Conversor Fecha Juliana</a>
                 </li>
               </ul>
             <div class="videos_grandes">
@@ -200,20 +214,7 @@
                         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br><br>
               </center>
             </div>
-            <div class="capa"><a name="mas"></a></div>
-            <h4>Más páginas relacionadas</h4>
-              <ul class="listas">
-                <li>🔎 <a 
-                       href="https://solarsystem.nasa.gov/asteroids-comets-and-meteors/asteroids/in-depth/">
-                       Asteroids - Solar System Exploration NASA</a>
-                </li>
-                <li>🔎 <a
-                       href="https://www.jpl.nasa.gov/asteroid-watch">Asteroid Watch</a>
-                <li>🔎 <a 
-                       href="https://www.ugr.es/~eaznar/conversorFecha.htm">
-                       Conversor Fecha Juliana</a>
-                </li>
-              </ul>
+            
               
               <br><br>
         </font>
